--- a/package.json
+++ b/package.json
@@ -2,6 +2,12 @@
   "name": "movies-explorer-api",
   "version": "1.0.0",
   "author": "Milchess",
+  "dependencies": {
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "mongoose": "^7.0.3",
+    "validator": "^13.9.0"
+  },
   "scripts": {
     "lint": "npx eslint .",
     "dev": "nodemon app.js",
